syntax = "proto3";

package protorpc;

option go_package = "user/";

service User {
  rpc IntrospectToken (IntrospectTokenRequest) returns (IntrospectTokenResp) {}
  rpc GetUsersByIDs (GetUserIDsRequest) returns (UserIDsResp) {}
}

message IntrospectTokenRequest {
  string token = 1;
}

message IntrospectTokenResp {
  UserDTO data = 1;
}

message GetUserIDsRequest {
  repeated string ids = 1;
}

message UserIDsResp {
  repeated UserDTO data = 1;
}

message UserDTO {
  string id = 1;
  string email = 2;
  string first_name = 3;
  string last_name = 4;
  string role = 5;
  string status = 6;
  string created_at = 7;
  string updated_at = 8;
}